--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-title: kissdata &#58; keep it simple &#38; stupied by data
+title: gulangtingtao &#58; Hacker and designer mentality
 layout: default
 comments: false
 ---
